# beerbase

./: README.md  pyproject.toml
assets/: openapi_cfg.yaml
assets/templates/: home.html
src/beerbase/: database.py  datatypes.py  server.py  stream.py  version.py
src/tests/: test_beer.py
